--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="paragraphes">
         <h3>Can a Neural Network recognize sketch drawings?</h3>
         <h4>SketchCNN is a Convolutional Neural Network that can recognize sketch drawings. <br>
-        Trained on millions of examples from Quick Draw dataset it can recognize sketches across over 100 different categories. <h4>
+        Trained on millions of examples from Quick Draw dataset it can recognize sketches across over <a href="/about.html">100 different categories.</a> <h4>
 
         <h4 id="modelstatus" style="display:inline;">Model not ready. Preparing ... &#10060;</h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <h4 id="classesstatus" style="display:inline;">Classes not loaded. Loading ... &#10060;</h4>
