removing backslash from ahrefs

--- a/about.html
+++ b/about.html
@@ -16,17 +16,17 @@
         <img class="logo" style="display:inline;" src="images/logo.png">
         <div class="float-right" style="display:inline;">
         <nav class="navbar navbar-light bg-grey"  style="display:inline;">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
             <img src="images/sletter.png" width="35" height="35" class="d-inline-block align-top" alt="">
             Sketch
             </a>
 
-            <a class="navbar-brand" href="/multisketch.html">
+            <a class="navbar-brand" href="multisketch.html">
             <img src="images/mletter.png" width="35" height="35" class="d-inline-block align-top" alt="">
             MultiSketch
             </a>
 
-            <a class="navbar-brand" href="/about.html">
+            <a class="navbar-brand" href="about.html">
             <img src="images/aletter.png" width="35" height="35" class="d-inline-block align-top" alt="">
             About
             </a>
