--- a/multisketch.html
+++ b/multisketch.html
@@ -17,17 +17,17 @@
         <img class="logo" style="display:inline;" src="images/logo.png">
         <div class="float-right" style="display:inline;">
         <nav class="navbar navbar-light bg-grey"  style="display:inline;">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
             <img src="images/sletter.png" width="35" height="35" class="d-inline-block align-top" alt="">
             Sketch
             </a>
 
-            <a class="navbar-brand" href="/multisketch.html">
+            <a class="navbar-brand" href="multisketch.html">
             <img src="images/mletter.png" width="35" height="35" class="d-inline-block align-top" alt="">
             MultiSketch
             </a>
 
-            <a class="navbar-brand" href="/about.html">
+            <a class="navbar-brand" href="about.html">
             <img src="images/aletter.png" width="35" height="35" class="d-inline-block align-top" alt="">
             About
             </a>
@@ -36,7 +36,7 @@
     </div>
 
     <div id="paragraphes">
-        <h4><b>MultiSketch</b> allows to draw multiple sketches. Can the model recognize them all?</h4>
+        <h4><b>MultiSketch</b> allows to draw multiple sketches. Can the model recognize them all? See <a href="about.html">the categories.</a></h4>
 
         <h4 id="modelstatus" style="display:inline;">Model not ready. Preparing ... &#10060;</h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <h4 id="classesstatus" style="display:inline;">Classes not loaded. Loading ... &#10060;</h4>
